<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tool="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/zoom_in"
            android:title="@string/zoom_in"
            android:icon="@android:drawable/btn_plus"
            tool:showAsAction="always"/>

    <item
            android:id="@+id/zoom_out"
            android:title="@string/zoom_out"
            android:icon="@android:drawable/btn_minus"
            tool:showAsAction="always"/>

    <item
            android:id="@+id/preview"
            android:title="@string/accept"
            android:icon="@android:drawable/ic_menu_gallery"
            tool:showAsAction="always|withText"/>
    <item
            android:id="@+id/select_all"
            android:title="@string/all"
            tool:showAsAction="always|withText"/>
    <item
            android:id="@+id/select_none"
            android:title="@string/none"
            tool:showAsAction="always|withText"/>
</menu>
